--- a/omossmh.css
+++ b/omossmh.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 hr {
-	width: 600px;
+	width: 31.55%;
 	border-top: 1px solid #f8f8f8;
 	border-bottom: 1px solid rgba(0,0,0,0.2);
 	margin-top: 3px;
