--- a/mh.css
+++ b/mh.css
@@ -1,5 +1,5 @@
 body{
-	background: url(https://images.unsplash.com/photo-1469389335181-2198b4caa734?auto=format&fit=crop&w=1932&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
+	background: url(https://images.unsplash.com/photo-1469389335181-2198b4caa734?auto=format&fit=crop&w=1932&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D) no-repeat center center fixed;
 	background-size: cover ;
 	font-family: Lato;
 	color: white ;
