--- a/omossmh.css
+++ b/omossmh.css
@@ -1,5 +1,5 @@
 body{
-	background: url(https://images.unsplash.com/photo-1504328345606-18bbc8c9d7d1?auto=format&fit=crop&w=1950&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
+	background: url(https://images.unsplash.com/photo-1504328345606-18bbc8c9d7d1?auto=format&fit=crop&w=1950&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D) no-repeat center center fixed;
 	background-size: cover ;
 	font-family: Lato;
 	color: white ;
